--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="../src/CSS/reset.css">
 <link rel="stylesheet" href="./CSS/estilos.css">
+<link rel="stylesheet" href="./CSS/scrollbar.css">
 
 </head>
 <body>
@@ -196,7 +197,7 @@
                 </ul>
 
                 <p class="descricao">
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quasi repudiandae cumque distinctio aspernatur iure laudantium dignissimos, a animi incidunt deserunt odit, doloribus reiciendis. Sed doloremque sequi consectetur accusantium qui.
+                   Quando ele retrai seu longo pescoço em sua concha, ele esguicha água com força vigorosa
                 </p>
 
             </li>
@@ -219,7 +220,7 @@
                 </ul>
 
                 <p class="descricao">
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat magnam nesciunt illum voluptatum autem, deleniti id consequatur obcaecati temporibus similique iure repellat qui consectetur non repudiandae quam quae a?
+                   É reconhecido como um símbolo de longevidade. Se sua concha tem algas, esse Wartortle é muito antigo.
             </li>
 
             <li class="cartao-pokemon">
@@ -240,7 +241,7 @@
                 </ul>
 
                 <p class="descricao">
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat magnam nesciunt illum voluptatum autem, deleniti id consequatur obcaecati temporibus similique iure repellat qui consectetur non repudiandae quam quae a?
+                   Ele esmaga seu inimigo sob o seu corpo pesado para causar desmaios. Em uma pitada, ele se retirará dentro de sua concha.
             </li>
 
             <li class="cartao-pokemon">
@@ -261,7 +262,7 @@
                 </ul>
 
                 <p class="descricao">
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat magnam nesciunt illum voluptatum autem, deleniti id consequatur obcaecati temporibus similique iure repellat qui consectetur non repudiandae quam quae a?
+                   Para sua proteção, ele libera um fedor horrível da antena em sua cabeça, para afastar os inimigos
             </li>
 
         </ul>
